<resources>
    <string name="app_name">Cambaceo Movil</string>

    <string name="action_logout">Salir</string>
    <string name="edit_text_hint">Teclee un valor</string>
    <string name="lbl_enviar">Enviar</string>
    <string name="title_activity_display_message">Detalle del domicilio</string>
    <string name="title_activity_login">Login</string>

    <string name="lbl_plaza">Plaza</string>
    <string name="lbl_municipio">Municipio</string>
    <string name="lbl_colonia">Colonia</string>

    <string name="lbl_numext">Num. Ext.</string>
    <string name="lbl_numint">Num. Int.</string>
    <string name="lbl_edificio">Edificio</string>
    <string name="lbl_departamento">Depto.</string>
    <string name="lbl_orientacion">Orientación</string>
    <string name="lbl_account_No">Num. Cta.</string>
    <string name="lbl_estatus">Estatus</string>
    <string name="lbl_factivacion">F. Activación</string>
    <string name="lbl_fsuspension">F. Suspensión</string>
    <string name="lbl_fcancelacion">F. Cancelación</string>
    <string name="lbl_ofertacomer">Oferta Comer.</string>
    <string name="lbl_convetidor">Convertidor</string>
    <string name="lbl_mta">MTA</string>
    <string name="lbl_cm">Cable Modem</string>
    <string name="lbl_saldoTotal">Saldo Total</string>
    <string name="lbl_saldoIncobrable">Saldo Incobrable</string>

    <string name="lbl_password">Password</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_login">Login</string>
    <string name="title_activity_swipe__section__fragment">Swipe_Section_Fragment</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

</resources>
